[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/flying_enemy.png" type="Texture" id=1]
[ext_resource path="res://Character/FlyingEnemy.gd" type="Script" id=2]
[ext_resource path="res://Interface/HealthBar.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 24 )

[sub_resource type="CircleShape2D" id=2]
radius = 321.123

[sub_resource type="CircleShape2D" id=3]
radius = 160.05

[sub_resource type="Animation" id=4]
resource_name = "Fly"
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1 ]
}

[node name="FlyingEnemy" type="KinematicBody2D"]
collision_layer = 2048
collision_mask = 17
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
self_modulate = Color( 0, 0, 1, 1 )
shape = SubResource( 1 )

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 4096
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
self_modulate = Color( 1, 1, 0, 1 )
shape = SubResource( 2 )

[node name="StopChasingArea" type="Area2D" parent="."]
collision_layer = 4096
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StopChasingArea"]
self_modulate = Color( 1, 0, 0, 1 )
shape = SubResource( 3 )

[node name="ShootingPosition" type="Position2D" parent="."]

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Fly"
anims/Fly = SubResource( 4 )

[node name="HealthBar" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -28 )
[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_exited"]
[connection signal="body_entered" from="StopChasingArea" to="." method="_on_StopChasingArea_body_entered"]
[connection signal="body_exited" from="StopChasingArea" to="." method="_on_StopChasingArea_body_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
